# matplotalt

./: .gitignore  .readthedocs.yaml  README.md  examples.ipynb  examples_test.ipynb  pyproject.toml  requirements.txt
chart_type_cls/: train_vit.py
docs/: requirements.txt
docs/source/: alttextify.rst  api.rst  conf.py  index.rst  matplotalt.rst
docs/source/notebooks/: examples.ipynb
evaluation/: annotation_display.py  caption_blip_metric_to_arr.npy  caption_sim_metric_to_arr.npy  description_stats.ipynb  error_type_stats.ipynb  evaluate_vistext.ipynb  gallery_blipscores.jsonl  gallery_error_annotations.tsv  generate_vistext_captions.ipynb  len_linear_fits.npy  linear_fits.py  matplotalt_blipscores.ipynb  shuffled_gallery_blipscores.jsonl  shuffled_vistext_blipscores.jsonl  stat_correlations.ipynb  vistext_blipscores.jsonl  vistext_error_annotations.tsv  vistext_id_to_scores.npy  vistext_id_to_sim_scores.npy  vistext_similarities.ipynb
evaluation/matplotlib_example_eval/: extract_figs_and_mpa_captions.ipynb  get_gpt4_captions.ipynb  nb_execution_times.npy
evaluation/matplotlib_gallery/: extract_figs_and_mpa_captions.ipynb  fig_id_captions_arr2.npy  fig_id_captions_arr3.npy  get_gpt4_captions.ipynb  mpl_gallery_combined_captions.jsonl  mpl_gallery_combined_captions_shuffled.jsonl  nb_execution_times.npy
evaluation/vistext_eval/: combine_captions.ipynb  generate_mpl_code.ipynb  generate_vistext_alt_captions.ipynb  generate_vistext_captions.ipynb  generate_vistext_table_captions.ipynb  scenegraph_to_mpl_helpers.py  vistext_data_test.json  vistext_data_validation.json  vistext_id_to_captions.npy  vistext_id_to_gpt4v_captions.npy  vistext_id_to_matplotalt_captions.npy  vistext_test_id_to_L3_gpt4_alt_captions.npy  vistext_test_id_to_L3_gpt4_alt_captions_old.npy  vistext_test_id_to_L3_gpt4_captions.npy  vistext_test_id_to_L3_gpt4_table_alt_captions.npy  vistext_test_id_to_L3_gpt4_table_captions.npy  vistext_test_id_to_L3_gpt4v_alt_captions.npy  vistext_test_id_to_L3_gpt4v_captions.npy  vistext_test_id_to_L3_gpt4v_table_captions.npy  vistext_test_id_to_L4_gpt4_alt_captions.npy  vistext_test_id_to_L4_gpt4_captions.npy  vistext_test_id_to_L4_gpt4v_table_captions.npy  vistext_test_id_to_captions.npy  vistext_test_id_to_matplotalt_captions.npy
evaluation/vistext_models_eval/: create_captions_df.ipynb  t5_image_guided_datatable_preds.txt  t5_image_guided_imageonly_preds.txt  t5_image_guided_scenegraph_preds.txt  vistext_t5_imageguided_captions.jsonl
evaluation/vistext_to_mpl/: scenegraph_to_mpl_helpers.py  vistext_id_to_matplotalt_captions.npy
examples/: examples.ipynb  examples.py  examples_no_alt.ipynb  llm_examples.ipynb
matplotalt/: __init__.py  alttextify_notebook.py  api_helpers.py  chart_descriptions.py  matplotalt.py  matplotalt_constants.py  matplotalt_helpers.py  stat_helpers.py  trend_helpers.py
tests/: ai_examples_test.ipynb  api_testing.ipynb  azure_examples.ipynb  cv_testing.ipynb  svg_cls_testing.ipynb  unichart_testing.ipynb  unit_test_helpers.py  unit_tests.py
