[project]
name = "matplotalt"
version = "0.0.1"
authors = [
  {name="Kai Nylund", email="knylund@cs.washington.com"},
  {name="Venkatesh Potluri", email="vpotluri@cs.washington.edu"}
]
maintainers = [
  {name="Kai Nylund", email="knylund@cs.washington.com"}
]
description = "A package for adding alt text to matplotlib figures in computational notebooks"
keywords = ["alt text", "Jupyter", "matplotlib", "seaborn", "LLMs"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KaiNylund/matplotalt"
Documentation = "https://matplotalt.readthedocs.io/en/latest/"
Discussions = "https://github.com/KaiNylund/matplotalt/discussions"
Issues = "https://github.com/KaiNylund/matplotalt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
alttextify = "matplotalt.alttextify_notebook:main"