[project]
name = "matplotalt"
version = "0.0.1"
authors = [
  {name="Kai Nylund", email="knylund@cs.washington.com"},
  {name="Venkatesh Potluri", email="vpotluri@cs.washington.edu"}
]
maintainers = [
  {name="Kai Nylund", email="knylund@cs.washington.com"}
]
description = "A package for adding alt text to matplotlib figures in computational notebooks"
keywords = ["alt text", "Jupyter", "matplotlib", "seaborn", "LLMs"]
readme = "README.md"

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "ipython>=8.12.3"
  "matplotlib>=3.8.0"
  "nbconvert>=7.16.4"
  "nbformat>=5.10.4"
  "numpy>=2.0.1"
  "openai>=1.37.1"
  "Pillow>=10.4.0"
  "pyexiv2>=2.14.0"
  "python_dateutil>=2.8.2"
  "scipy>=1.11.4"
  "webcolors>=1.13"
]

[project.optional-dependencies]
model = "transformers>=4.37.2"


[project.urls]
Homepage = "https://github.com/KaiNylund/matplotalt"
Documentation = "https://matplotalt.readthedocs.io/en/latest/"
Discussions = "https://github.com/KaiNylund/matplotalt/discussions"
Issues = "https://github.com/KaiNylund/matplotalt/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
alttextify = "matplotalt.alttextify_notebook:main"